[package]
name = "gitache"
version = "0.1.0"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
edition = "2018"


[dependencies]
actix-web = "1.0.5"
awc = { version = "0.2.2", features = ["default", "ssl"] }
env_logger = "0.6.2"
futures = "0.1.28"
lazy_static = "1.3.0"
mime_guess = "1.8.7"
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
