[package]
name = "yagcdn"
version = "0.1.0"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
edition = "2021"


[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
async-trait = "0.1.83"
awc = { version = "3.5.1", features = ["default", "rustls"] }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
serde = { version = "1.0.210", features = ["rc", "derive"] }
structopt = "0.3.26"
thiserror = "1.0.64"
time-cache = { path = "../time-cache" }
tokio = { version = "1.40.0", features = ["sync"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.12"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
