[package]
name = "yagcdn"
version = "0.1.0"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
edition = "2021"


[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
async-trait = "0.1.89"
awc = { version = "3.8.1", features = ["default", "rustls"] }
clap = { version = "4.5.49", features = ["derive"] }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["rc", "derive"] }
thiserror = "2.0.17"
time-cache = { path = "../time-cache" }
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
